Remove remaining direct references to kExperimentalAppBanners

crrev.com/786357 replaced references to kExperimentalAppBanners with
calls to IsExperimentalAppBannersEnabled(). A couple of other references
to kExperimentalAppBanners were either missed, or were added since then.
This CL switches them over too.

Bug: 788974
Change-Id: I4e8a3a34ab81aec56e661c960255132c71f52300
Reviewed-on: https://chromium-review.googlesource.com/795494
Reviewed-by: Dominick Ng <dominickn@chromium.org>
Reviewed-by: Matt Giuca <mgiuca@chromium.org>
Commit-Queue: Michael McGreevy <mcgreevy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#520031}