chrome/browser/banners/app_banner_manager_desktop.cc
@@ -32,7 +32,7 @@ bool AppBannerManagerDesktop::IsEnabled() {
     return false;
 
   return base::FeatureList::IsEnabled(features::kAppBanners) ||
-         base::FeatureList::IsEnabled(features::kExperimentalAppBanners);
+         IsExperimentalAppBannersEnabled();
 }
 
 void AppBannerManagerDesktop::DisableTriggeringForTesting() {
